Many things: Removed overflow checker because it wouldn't work anyways and responsiveness is supposed to be added later in the project's (play/script.js) Appended squares (play/script.js) Solved row problem through grid (play/styles.css) Removed unneeded property of row which will be added through grid (play/styles.css)

--- a/play/styles.css
+++ b/play/styles.css
@@ -183,6 +183,8 @@ main
 
 .modal--board
 {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1px;
   margin: 10% auto;
   border-width: 1px;
   border-color: var(--dark-chocolate);
@@ -194,7 +196,6 @@ main
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 0;
 }
 
 .board--square
